<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/setting_layout"
    android:layout_height="match_parent"
    tools:context=".ui.profile.user_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/settings_layout"
        style="@style/SettingsSCREEN"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/appBar"
                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:navigationIcon="@drawable/ic_baseline_menu_24"
                    app:title="Settings"
                    android:background="@color/primary_color"
                    app:titleTextColor="@color/white" />

            </com.google.android.material.appbar.AppBarLayout>




        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_baseline_supervised_user_circle_24"
                    android:layout_height="100dp"/>

                <TextView
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/john_david"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/johndavid_gmail_com"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    style="@style/SettingsSCREENBtn"
                    android:layout_gravity="center"
                    android:paddingEnd="30dp"
                    android:text="@string/edit_profile"
                    android:paddingStart="30dp"
                    />

                <LinearLayout
                    android:background="@drawable/options_background_settings"
                    android:layout_width="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_height="wrap_content">

                    <!-- Dark Mode / Night Mode -->

                    <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            app:tint="@color/black"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:id="@+id/notification_background"
                            android:background="@drawable/round_back_night_mode"
                            android:src="@drawable/ic_baseline_nights_stay_24"
                            android:padding="12dp"
                            android:contentDescription="Night Mode"/>

                        <TextView
                            android:layout_marginStart="20dp"
                            android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/night_mode"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_toEndOf="@+id/notification_background"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.SwitchCompat
                            android:layout_width="wrap_content"
                            android:id="@+id/nightModeSwitch"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:switchMinWidth="50dp"
                            android:theme="@style/nightModeSwitch"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />

                    </RelativeLayout>

                    <!-- Notification -->

                    <RelativeLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            app:tint="@color/black"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:id="@+id/nightModeIcon"
                            android:background="@drawable/round_back_night_mode"
                            android:src="@drawable/ic_baseline_notifications_24"
                            android:padding="12dp"
                            android:contentDescription="Night Mode"/>

                        <TextView
                            android:layout_marginStart="20dp"
                            android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/notifications"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_toEndOf="@+id/nightModeIcon"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.SwitchCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:switchMinWidth="50dp"
                            android:id="@+id/notificationbtn"
                            android:theme="@style/nightModeSwitch"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />

                    </RelativeLayout>

                    <!-- Private Account -->

                    <RelativeLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            app:tint="@color/black"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:id="@+id/privateAccount"
                            android:background="@drawable/round_back_night_mode"
                            android:src="@drawable/ic_baseline_account_circle_24"
                            android:padding="12dp"
                            android:contentDescription="Night Mode"/>

                        <TextView
                            android:layout_marginStart="20dp"
                            android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/private_account"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_toEndOf="@+id/privateAccount"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.SwitchCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:id="@+id/private_account"
                            android:switchMinWidth="50dp"
                            android:theme="@style/nightModeSwitch"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />

                    </RelativeLayout>




                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/options_background_settings"
                    android:layout_width="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            app:tint="@color/black"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:id="@+id/aboutUs"
                            android:background="@drawable/round_back_night_mode"
                            android:src="@drawable/about_us"
                            android:padding="12dp"
                            android:contentDescription="about us"/>

                        <TextView
                            android:layout_marginStart="20dp"
                            android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/about_us"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_toEndOf="@+id/aboutUs"
                            android:layout_height="wrap_content"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/aboutPage"
                            android:src="@drawable/ic_baseline_arrow_forward_24"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            />

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            app:tint="@color/black"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:id="@+id/about_us"
                            android:background="@drawable/round_back_night_mode"
                            android:src="@drawable/ic_baseline_help_24"
                            android:padding="12dp"
                            android:contentDescription="Night Mode"/>

                        <TextView
                            android:layout_marginStart="20dp"
                            android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="FAQ"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_toEndOf="@+id/about_us"
                            android:layout_height="wrap_content"/>

                        <ImageView
                            android:id="@+id/faq_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_baseline_arrow_forward_24"
                            />

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            app:tint="@color/black"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:id="@+id/faq"
                            android:background="@drawable/round_back_night_mode"
                            android:src="@drawable/ic_baseline_support_agent_24"
                            android:padding="12dp"
                            android:contentDescription="Night Mode"/>

                        <TextView
                            android:layout_marginStart="20dp"
                            android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="Help &amp; Support"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_toEndOf="@+id/faq"
                            android:layout_height="wrap_content"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_baseline_arrow_forward_24"

                            />

                    </RelativeLayout>




                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_height="match_parent">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>